--- a/San Marcos Web En/Views/De-mexico-para-el-mundo.html
+++ b/San Marcos Web En/Views/De-mexico-para-el-mundo.html
@@ -85,28 +85,40 @@
 
     <div class="grid-container">
         <div class="grid-item">
-            <h4 class="box-title">I Take Ownership</h4>
-            <p class="box-text">We are entrepreneurs, creating new and better opportunities.</p>
+            <div class="grid-item-1">
+                <h4 class="box-title">I Take Ownership</h4>
+                <p class="box-text">We are entrepreneurs, creating new and better opportunities.</p>
+            </div>
         </div>
         <div class="grid-item">
-            <h4 class="box-title">Dream Big</h4>
-            <p class="box-text">We believe everything is possible and make it a reality</p>
+            <div class="grid-item-2">
+                <h4 class="box-title">Dream Big</h4>
+                <p class="box-text">We believe everything is possible and make it a reality</p>
+            </div>
         </div>
         <div class="grid-item">
-            <h4 class="box-title">I Am Passionate About What I Do</h4>
-            <p class="box-text">We are passionate about what we do, working with energy and a sense of urgency.</p>
+            <div class="grid-item-3">
+                <h4 class="box-title">I Am Passionate About What I Do</h4>
+                <p class="box-text">We are passionate about what we do, working with energy and a sense of urgency.</p>
+            </div>
         </div>
         <div class="grid-item">
-            <h4 class="box-title">I Am Integrity</h4>
+            <div class="grid-item-4">
+                <h4 class="box-title">I Am Integrity</h4>
             <p class="box-text">We are transparent, do not take shortcuts, and always do what is right with our team, suppliers, and customers.</p>
+            </div>
         </div>
         <div class="grid-item">
-            <h4 class="box-title">I Am Excellent</h4>
-            <p class="box-text">We seek continuous learning, achieve results as a team, and with the best talent.</p>
+            <div class="grid-item-5">
+                <h4 class="box-title">I Am Excellent</h4>
+                <p class="box-text">We seek continuous learning, achieve results as a team, and with the best talent.</p>
+            </div>
         </div>
         <div class="grid-item">
-            <h4 class="box-title">I Have Discipline</h4>
-            <p class="box-text">Through management, adherence to processes and routines, we ensure sustainable results.</p>
+            <div class="grid-item-6">
+                <h4 class="box-title">I Have Discipline</h4>
+                <p class="box-text">Through management, adherence to processes and routines, we ensure sustainable results.</p>
+            </div>
         </div>
     </div>
 
