--- a/San Marcos Web En/Views/Header/header.html
+++ b/San Marcos Web En/Views/Header/header.html
@@ -22,7 +22,7 @@
                     <li><a href="/San Marcos Web En/Views/Atencion-clientes.html">Contact</a>
                         <ul class="submenu">
                             <li><a href="/San Marcos Web En/Views/Atencion-clientes.html">Customer Service</a></li>
-                            <li><a href="/San Marcos Web En/Views/Parte-del-Equipo.html">Join Our Team</a></li>
+                            <li><a href="/San Marcos Web En/Views/Parte-del-Equipo.html">Be part of the team</a></li>
                         </ul>
                     </li>
                 </ul>
