--- a/San Marcos Web En/Views/Reporte-Sostenibilidad.html
+++ b/San Marcos Web En/Views/Reporte-Sostenibilidad.html
@@ -52,7 +52,7 @@
                 <p>Mexican food is not only spicy by nature, it’s spicy because it’s mexican. And that’s what makes it unique, like our chipotles and jalapeños, give your dishes a unique flavor and enjoy this delicious taste full of tradition.
                     More than 6000 hectares are dedicated to its cultivation.</p>
                 <p>Our growth and value are maximized when we transform ourselves to grow and build a better world. We are part of the solutions, integrating the social, environmental and governance dimensions as the engine of our strategy and creation of shared value.</p>
-                <button>Ver reporte</button>
+                <button>see report</button>
             </div>
             <div class="image01">
                 <img src="../Images/Reporte-Sostenibilidad/reporte2022_eng.webp" alt="">
@@ -61,19 +61,22 @@
     </div>
 
     <div class="container02">
-        <h1>Sustainability Report</h1>
-        <div class="image02">
-            <img src="../Images/Reporte-Sostenibilidad/familia_salsa.webp" alt="">
-        </div>
-        <div class="sub-container02">
-            <div class="text02">
-                <p>Mexican food is not only spicy by nature, it’s spicy because it’s mexican. And that’s what makes it unique, like our chipotles and jalapeños, give your dishes a unique flavor and enjoy this delicious taste full of tradition.
-                    More than 6000 hectares are dedicated to its cultivation.</p>
-                <p>Our growth and value are maximized when we transform ourselves to grow and build a better world. We are part of the solutions, integrating the social, environmental and governance dimensions as the engine of our strategy and creation of shared value.</p>
-                <button>Ver reporte</button>
+        <h1>Human Rights Policy</h1>
+        <div class="content">
+            <div class="image02">
+                <img src="../Images/Reporte-Sostenibilidad/familia_salsa.webp" alt="Human Rights Image">
+            </div>
+            <div class="text-container">
+                <div class="text02">
+                    <p>We respect and promote respect for internationally recognized human rights set forth in the International Charter of Human Rights, in the American Convention on Human Rights, in the fundamental principles and rights, at work contained in the ILO declaration regarding the principles and fundamental rights at work and in the fundamental conventions of the international labor organization. Likewise, the United Nations Guiding Principles on Business and Human Rights, the OECD Guidelines for Multinational Enterprises, and the UN WEP Women’s Economic Empowerment Principles.</p>
+                    <button>See policy</button>
+                </div>
             </div>
         </div>
     </div>
+    
+    
+    
 
     <div class="slider-standars">
         <br>
