--- a/San Marcos Web Es/Views/De-mexico-para-el-mundo.html
+++ b/San Marcos Web Es/Views/De-mexico-para-el-mundo.html
@@ -89,28 +89,40 @@
 
     <div class="grid-container">
         <div class="grid-item">
-            <h4 class="box-title">Soy dueño</h4>
-            <p class="box-text">Somos emprendedores, creamos nuevas y mejores oportunidades.</p>
+            <div class="grid-item-1">
+                <h4 class="box-title">Soy dueño</h4>
+                <p class="box-text">Somos emprendedores, creamos nuevas y mejores oportunidades.</p>
+            </div>
         </div>
         <div class="grid-item">
-            <h4 class="box-title">Sueño en grande</h4>
-            <p class="box-text">Creemos que todo es posible y lo hacemos realidad</p>
+            <div class="grid-item-2">
+                <h4 class="box-title">Sueño en grande</h4>
+                <p class="box-text">Creemos que todo es posible y lo hacemos realidad</p>
+            </div>
         </div>
         <div class="grid-item">
-            <h4 class="box-title">Me apasiona lo que hago</h4>
-            <p class="box-text">Nos apasiona lo que hacemos, trabajamos con energía y sentido de urgencia.</p>
+            <div class="grid-item-3">
+                <h4 class="box-title">Me apasiona lo que hago</h4>
+                <p class="box-text">Nos apasiona lo que hacemos, trabajamos con energía y sentido de urgencia.</p>
+            </div>
         </div>
         <div class="grid-item">
-            <h4 class="box-title">Soy integro</h4>
+            <div class="grid-item-4">
+                <h4 class="box-title">Soy integro</h4>
             <p class="box-text">Somos transparentes, no tomamos atajos, hacemos siempre lo correcto con nuestro equipo, proveedores y clientes.</p>
+            </div>
         </div>
         <div class="grid-item">
-            <h4 class="box-title">Soy excelente</h4>
-            <p class="box-text">Buscamos el aprendizaje continuo, alcanzamos resultado en equipo y con el mejor talento.</p>
+            <div class="grid-item-5">
+                <h4 class="box-title">Soy excelente</h4>
+                <p class="box-text">Buscamos el aprendizaje continuo, alcanzamos resultado en equipo y con el mejor talento.</p>
+            </div>
         </div>
         <div class="grid-item">
-            <h4 class="box-title">Tengo disciplina</h4>
-            <p class="box-text">A través de la gestión, cumplimiento de procesos y rutinas, garantizamos resultados sostenibles.</p>
+            <div class="grid-item-6">
+                <h4 class="box-title">Tengo disciplina</h4>
+                <p class="box-text">A través de la gestión, cumplimiento de procesos y rutinas, garantizamos resultados sostenibles.</p>
+            </div>
         </div>
     </div>
     
