--- a/San Marcos Web Es/Views/Footer/footer.html
+++ b/San Marcos Web Es/Views/Footer/footer.html
@@ -18,7 +18,7 @@
                     <li><a href="#">Aviso de Privacidad</a></li>
                     <li><a href="/San Marcos Web Es/Views/Nuestros-productos.html">Productos</a></li>
                     <li><a href="https://www.google.com/search?q=productos+chiles+san+marcos&sa=X&biw=1915&bih=915&tbm=shop&ei=7ce5ZI-CDL6hkPIPzMyGwA8&ved=0ahUKEwjPrIzXvJ6AAxW-EEQIHUymAfgQ4dUDCAg&uact=5&oq=productos+chiles+san+marcos&gs_lp=Egtwcm9kdWN0cy1jYyIbcHJvZHVjdG9zIGNoaWxlcyBzYW4gbWFyY29zMgUQABiiBDIFEAAYogRI3xtQyQZYrxFwAXgAkAEAmAFkoAH0BaoBAzguMbgBA8gBAPgBAcICCBAAGIAEGLADwgILEAAYCBgeGBgYsAPCAgcQABgNGIAEwgIKEAAYCBgeGA0YGIgGAZAGAg&sclient=products-cc">¿Dónde comprar?</a></li>
-                    <li><a href="#">Legales</a></li>
+                    <li><a href="/San Marcos Web Es/Views/Legales.html">Legales</a></li>
                 </ul>
             </div>
             <div class="seccion-footer seccion-contacto">
