--- a/San Marcos Web Es/Views/Productos/Chiles/Chiles.html
+++ b/San Marcos Web Es/Views/Productos/Chiles/Chiles.html
@@ -56,7 +56,7 @@
                 <p id="product-info">Nuestra salsa mexicana está hecha con el verdadero estilo casero y la combinación de los mejores ingredientes.</p>
                 <a id="product-link" href="./Info-chiles.html?product=chicharos">
                     <button class="button01">
-                        <span>SEE MORE ></span>
+                        <span>VER MÁS ></span>
                     </button>
                 </a>
             </div>
