--- a/San Marcos Web En/Styles/De-mexico-para-el-mundo.css
+++ b/San Marcos Web En/Styles/De-mexico-para-el-mundo.css
@@ -145,14 +145,13 @@ body {
 
 .grid-item {
     width: calc(16.66% - 10px);
-    background-color: #091F3F;
     color: #ffffff;
     text-align: center;
     padding:  10px 20px;
     position: relative;
     cursor: pointer;
     overflow: hidden;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     height: 250px;
 }
 
@@ -165,6 +164,72 @@ body {
     width: 100%;
     height: 10px; 
     background-color: rgb(252, 252, 6); 
+}
+
+.grid-item-1 {
+    background-image: url('./../Images/De-mexico-para-el-mundo/cajones_duen.webp');
+    text-align: center;
+    padding:  10px 20px;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    margin-bottom: 20px;
+    height: 250px;
+}
+
+.grid-item-2 {
+    background-image: url('./../Images/De-mexico-para-el-mundo/cajones_suen.webp');
+    text-align: center;
+    padding:  10px 20px;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    margin-bottom: 20px;
+    height: 250px;
+}
+
+.grid-item-3 {
+    background-image: url('./../Images/De-mexico-para-el-mundo/cajones_apas.webp');
+    text-align: center;
+    padding:  10px 20px;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    margin-bottom: 20px;
+    height: 250px;
+}
+
+.grid-item-4 {
+    background-image: url('./../Images/De-mexico-para-el-mundo/cajones_inte.webp');
+    text-align: center;
+    padding:  10px 20px;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    margin-bottom: 20px;
+    height: 250px;
+}
+
+.grid-item-5 {
+    background-image: url('./../Images/De-mexico-para-el-mundo/cajones_exce.webp');
+    text-align: center;
+    padding:  10px 20px;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    margin-bottom: 20px;
+    height: 250px;
+}
+
+.grid-item-6 {
+    background-image: url('./../Images/De-mexico-para-el-mundo/cajones_disc.webp');
+    text-align: center;
+    padding:  10px 20px;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    margin-bottom: 20px;
+    height: 250px;
 }
 
 .box-title {
