--- a/San Marcos Web Es/Views/Header/header.html
+++ b/San Marcos Web Es/Views/Header/header.html
@@ -30,8 +30,6 @@
             <div class="logo">
                 <a href="/San Marcos Web Es/Index.html"><img src="/San Marcos Web Es/Views/Header/Images/logo_sanmarcos.svg" alt="San Marcos"></a>
             </div>
-
-
             <div class="center-container">
                 <div class="search-container">
                     <input type="checkbox" id="search-toggle">
@@ -41,18 +39,12 @@
                     <input type="text" class="search-input" placeholder="Buscar..." id="buscar">
                 </div>
             </div>
-
-
-            <!-- Modal -->
-<div id="modal" class="modal">
-    <div class="modal-content">
-        <span class="close" onclick="closeModal()">&times;</span>
-        <ul id="results"></ul>
-    </div>
-</div>
-
-
-
+                <div id="modal" class="modal">
+                    <div class="modal-content">
+                        <span class="close" onclick="closeModal()">&times;</span>
+                        <ul id="results"></ul>
+                    </div>
+                </div>
             <div class="search-lang">
                 <div class="languages">
                     <a href="/San Marcos Web Es/Index.html">
@@ -69,7 +61,6 @@
 
 
     <script>
-        // Datos de ejemplo
         let data = [
             { name: "Productos Chiles", image: "/San Marcos Web Es/Images/Home/Prodct_chil_name.webp", link: "/San Marcos Web Es/Views/Productos/Chiles/Chiles.html" },
             { name: "Productos Frijoles", image: "/San Marcos Web Es/Images/Home/Prodct_frij_nameV2.webp", link: "/San Marcos Web Es/Views/Productos/Frijoles/Frijoles.html" },
@@ -78,10 +69,8 @@
             { name: "Productos Verduras", image: "/San Marcos Web Es/Images/Home/Prodct_verd_name.webp", link: "/San Marcos Web Es/Views/Productos/Verduras/Verduras.html" },
             { name: "Productos Vinagre", image: "/San Marcos Web Es/Images/Home/Prodct_vinag_name.webp", link: "/San Marcos Web Es/Views/Productos//Vinagre/Vinagre.html" },
 
-
             { name: 'Productos', image: '/San Marcos Web Es/Images/Nuestros-productos/Background01.jpg', link: '/San Marcos Web Es/Views/Nuestros-productos.html' },
             { name: 'Recetas', image: '/San Marcos Web Es/Images/De-cocina-y-mas/Background01.webp', link: '/San Marcos Web Es/Views/De-cocina-y-mas.html' },
-
 
             { name: 'Recetas Pollo', image: '/San Marcos Web Es/Images/De-cocina-y-mas/pollo.webp', link:'./Views/Recetas/Recetas-Pollo/Recetas-pollo.html'},
             { name: 'Recetas Res / Cerdo', image: '/San Marcos Web Es/Images/De-cocina-y-mas/Res.webp', link: './Views/Recetas/Recetas-Res/Recetas-res.html'},
@@ -93,38 +82,30 @@
     
         function buscar() {
             let query = document.getElementById("buscar").value;
-    
-            console.log(query);
-    
             if (query.trim() === "") {
                 return;
             }
-    
             let results = [];
-    
             for (let i = 0; i < data.length; i++) {
                 if (data[i].name.toLowerCase().includes(query.toLowerCase())) {
                     results.push(data[i]);
                 }
             }
-    
             let resultsContainer = document.getElementById("results");
             resultsContainer.innerHTML = "";
-    
             if (results.length > 0) {
                 for (let i = 0; i < results.length; i++) {
                     let li = document.createElement('li');
-    
                     let img = document.createElement('img');
                     img.src = results[i].image;
                     img.alt = results[i].name;
-                    img.style.width = '100px'; // Ajusta el tamaño según sea necesario
-                    img.style.height = '100px'; // Ajusta el tamaño según sea necesario
+                    img.style.width = '100px';
+                    img.style.height = '100px'; 
     
                     let a = document.createElement('a');
                     a.href = results[i].link;
                     a.textContent = results[i].name;
-                    a.style.marginLeft = '40px'; // Espacio entre la imagen y el texto
+                    a.style.marginLeft = '40px'; 
     
                     li.appendChild(img);
                     li.appendChild(a);
@@ -136,16 +117,16 @@
                 resultsContainer.appendChild(li);
             }
     
-            document.getElementById("modal").style.display = "block"; // Muestra el modal
+            document.getElementById("modal").style.display = "block"; 
         }
     
         function closeModal() {
-            document.getElementById("modal").style.display = "none"; // Oculta el modal
+            document.getElementById("modal").style.display = "none"; 
         }
     
         document.getElementById("buscar").addEventListener("keydown", function(event) {
             if (event.key === "Enter") {
-                event.preventDefault(); // Evita el comportamiento por defecto del Enter
+                event.preventDefault(); 
                 buscar();
             }
         });
